--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -4,7 +4,7 @@ file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)
 
 set(SOURCES ${TEST_SOURCES})
 
-add_executable(${BINARY} ${TEST_SOURCES} Vertex_Tests.cpp)
+add_executable(${BINARY} ${TEST_SOURCES} Vertex_Tests.cpp CompleteGraphTest.cpp)
 
 add_test(NAME ${BINARY} COMMAND ${BINARY})
 
